@@ -1,0 +1,12 @@
+use strict;
+use warnings;
+
+use Test::More;
+
+use lib 't/lib';
+
+use_ok 'RS';
+
+done_testing;
+
+1;
