@@ -1,0 +1,9 @@
+package ParentRS;
+
+use base 'DBIx::Class::ResultSet';
+
+__PACKAGE__->load_components(qw/
+   Helper::ResultSet::Shortcut
+/);
+
+1;
