@@ -1,0 +1,7 @@
+package RS;
+
+use base 'ParentRS';
+
+__PACKAGE__->load_components('Helper::ResultSet::Random');
+
+1;
